--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
           <button mat-icon-button (click)="updateProduct(row)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button color="primary" mat-icon-button (click)="deleteProduct(row.id)">
+          <button color="primary" mat-icon-button (click)="deleteProduct(row.key)">
             <mat-icon>delete</mat-icon>
           </button>
 
